ECCT-467-update-filing-data-stucture-and-response-inline-with-filing-best-practices